# fastapi-admin.github.io

./: .gitignore  404.html  CNAME  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  gh-pages.yml
custom/action/: index.html
custom/file_upload/: index.html
custom/overwrite/: index.html
custom/page/: index.html
custom/provider/: index.html
custom/widget/: index.html
docs/en/: mkdocs.yml
docs/en/docs/: index.md
docs/overrides/: main.html
docs/zh/: mkdocs.yml
docs/zh/docs/: index.md
getting_started/installation/: index.html
getting_started/quick_start/: index.html
getting_started/quickstart/: index.html
pro/exclusive/: index.html
pro/installation/: index.html
pro/sponsor/: index.html
pro/support/: index.html
pro/upgrade/: index.html
reference/: index.html
reference/admin_log/: index.html
reference/errors/: index.html
reference/file_upload/: index.html
reference/global_search/: index.html
reference/login/: index.html
reference/middleware/: index.html
reference/notification/: index.html
reference/permission/: index.html
reference/resource/: index.html
reference/widget/display/: index.html
reference/widget/filter/: index.html
reference/widget/input/: index.html
search/: search_index.json
zh/: 404.html  index.html  sitemap.xml
zh/custom/: index.html
zh/custom/action/: index.html
zh/custom/file_upload/: index.html
zh/custom/overwrite/: index.html
zh/custom/page/: index.html
zh/pro/: index.html
zh/reference/: index.html
zh/search/: search_index.json
(+51 files in other folders)
