[tool.poetry]
name = "fastapi-admin.github.io"
version = "0.1.0"
description = "Docs of fastapi-admin"
authors = ["long2ice <long2ice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "*"
mkdocs-git-revision-date-localized-plugin = "*"
mkdocs-material = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
